Fix popup letter-spacing

--- a/src/pages/Content/index.scss
+++ b/src/pages/Content/index.scss
@@ -25,6 +25,7 @@
     'Noto Color Emoji';
   font-size: 14px;
   line-height: 1.5;
+  letter-spacing: initial;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
